@@ -1,4 +1,14 @@
-2004-03-31  Jay Rossiter <cryptographite@users.sf.net> 1.4.4-cvs-b8
+2004-04-01  Jay Rossiter <cryptographite@users.sf.net> 1.4.4-cvs-b9
+
+	* Change: Updated if(getAlbumName) to if(isAlbum) in view_album.php
+
+	* Change: if(strlen()) -> if(!empty()) in watermark code
+
+	* Typo: "Beginn" -> "Begin" in adminAlbumLayout.inc
+
+	* Typo: Case fix in view_album.php for "Watermark Album"
+
+2004-04-01  Jay Rossiter <cryptographite@users.sf.net> 1.4.4-cvs-b8
 
 	* Change: Replace = with : in embedded_style.css for *all* skins
 
